<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/registration_fragment"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/center"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:text="@string/back_button"
        android:id="@+id/back_button"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="25dp"
        android:textSize="12sp"
        android:textColor="#FFF"
        android:background="@drawable/background_avatar"
        android:layout_marginTop="25dp" />

    <ImageView
        android:layout_width="@dimen/avatar_radius"
        android:layout_height="@dimen/avatar_radius"
        android:id="@+id/avatar_signup"
        android:layout_centerHorizontal="true"
        android:background="@drawable/background_avatar"
        android:adjustViewBounds="true"
        android:layout_above="@+id/username_signup"
        android:layout_marginBottom="20dp" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:layout_width="@dimen/layout_width"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:singleLine="true"
        app:floatingLabel="highlight"
        app:hideUnderline="true"
        android:id="@+id/username_signup"
        android:layout_above="@+id/password_signup"
        android:layout_centerHorizontal="true"
        android:hint="@string/user_name_edit_text"
        app:floatingLabelText="@string/user_name_hint_1"
        app:baseColor="#fff"
        app:primaryColor="#fff"
        android:textSize="@dimen/text_size"
        android:layout_marginBottom="3dp" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:layout_width="@dimen/layout_width"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:singleLine="true"
        app:floatingLabel="highlight"
        app:hideUnderline="true"
        android:id="@+id/password_signup"
        android:layout_above="@+id/center"
        android:layout_centerHorizontal="true"
        android:hint="@string/password_edit_text"
        app:floatingLabelText="@string/password_edit_text_sign_up_hint"
        app:baseColor="#fff"
        app:primaryColor="#fff"
        android:textSize="@dimen/text_size"
        android:layout_marginBottom="3dp" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:layout_width="@dimen/layout_width"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/confirm_password_signup"
        android:singleLine="true"
        app:floatingLabel="highlight"
        app:hideUnderline="true"
        android:layout_centerHorizontal="true"
        android:inputType="textPassword"
        android:layout_alignTop="@+id/center"
        android:hint="@string/confirm_password_edit_text"
        app:floatingLabelText="@string/confirm_password_edit_text_hint"
        app:baseColor="#fff"
        app:primaryColor="#fff"
        android:textSize="@dimen/text_size"
        android:layout_marginBottom="3dp" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:layout_width="@dimen/layout_width"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/email_signup"
        android:singleLine="true"
        app:floatingLabel="highlight"
        app:hideUnderline="true"
        android:layout_below="@+id/confirm_password_signup"
        android:layout_centerHorizontal="true"
        android:hint="@string/email_edit_text"
        app:floatingLabelText="@string/email_edit_text_hint"
        app:baseColor="#fff"
        app:primaryColor="#fff"
        android:textSize="@dimen/text_size"
        android:layout_marginBottom="3dp" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:layout_width="@dimen/layout_width"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/birthday_signup"
        android:singleLine="true"
        app:floatingLabel="highlight"
        app:hideUnderline="true"
        android:layout_below="@+id/email_signup"
        android:layout_centerHorizontal="true"
        android:hint="@string/birthday_edit_text"
        app:floatingLabelText="@string/birthday_edit_text_hint"
        app:baseColor="#fff"
        app:primaryColor="#fff"
        android:textSize="@dimen/text_size"
        android:layout_marginBottom="3dp" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:layout_width="@dimen/layout_width"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/gender_signup"
        android:singleLine="true"
        app:floatingLabel="highlight"
        app:hideUnderline="true"
        android:layout_below="@+id/birthday_signup"
        android:layout_centerHorizontal="true"
        android:hint="@string/gender_edit_text"
        app:floatingLabelText="@string/gender_edit_text_hint"
        app:baseColor="#fff"
        app:primaryColor="#fff"
        android:textSize="@dimen/text_size"
        android:layout_marginBottom="15dp" />

    <Button
        android:layout_width="@dimen/layout_width"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_main_button"
        android:id="@+id/signup_main"
        android:textColor="@drawable/button_text_color"
        android:background="@drawable/background_signup"
        android:layout_marginBottom="15dp"
        android:textSize="@dimen/text_size"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <fr.castorflex.android.smoothprogressbar.SmoothProgressBar
        android:id="@+id/registration_progress_bar"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        style="@style/GNowProgressBar"
        android:indeterminate="true"
        android:layout_below="@+id/signup_main"
        android:layout_alignRight="@+id/signup_main"
        android:layout_alignLeft="@+id/signup_main"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp" />

</RelativeLayout>