<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:ripple="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/sign_up_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <ImageView
        android:layout_width="@dimen/layout_width"
        android:layout_height="120dp"
        android:id="@+id/avatar"
        android:layout_marginTop="50dp"
        android:layout_alignParentTop="true"
        android:background="#ff41a8ff"
        android:layout_centerHorizontal="true" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:layout_width="@dimen/layout_width"
        android:layout_height="wrap_content"
        android:id="@+id/username_edit"
        android:inputType="textPersonName"
        android:ems="10"
        android:singleLine="true"
        app:floatingLabel="highlight"
        app:baseColor="#fff"
        app:primaryColor="#fff"
        app:floatingLabelText="@string/user_name_hint_1"
        app:hideUnderline="true"
        android:layout_above="@+id/center"
        android:layout_centerHorizontal="true"
        android:hint="@string/user_name_edit_text"
        android:layout_marginBottom="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/center"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:layout_width="@dimen/layout_width"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:singleLine="true"
        app:floatingLabel="highlight"
        app:baseColor="#fff"
        app:primaryColor="#fff"
        app:floatingLabelText="@string/password_edit_text_main_hint"
        app:hideUnderline="true"
        android:id="@+id/password_edit"
        android:layout_below="@+id/username_edit"
        android:layout_centerHorizontal="true"
        android:hint="@string/password_edit_text" />

    <Button
        android:layout_width="@dimen/layout_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/sign_up_main_button"
        android:id="@+id/sign_up"
        android:layout_below="@+id/password_edit"
        android:textColor="@drawable/button_text_color"
        android:background="@drawable/background_signup"
        android:layout_centerHorizontal="true" />

    <fr.castorflex.android.smoothprogressbar.SmoothProgressBar
        android:id="@+id/signup_progress_bar"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        style="@style/GNowProgressBar"
        android:indeterminate="true"
        android:layout_below="@+id/sign_up"
        android:layout_alignRight="@+id/sign_up"
        android:layout_alignLeft="@+id/sign_up"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/forgot_password_text_view"
        android:id="@+id/password_recovery"
        android:layout_below="@+id/sign_up"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:textColor="#ffffffff" />

    <ImageButton
        android:layout_width="@dimen/social_buttons_width"
        android:layout_height="wrap_content"
        android:id="@+id/facebook"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/background_normal_social"
        android:src="@drawable/facebook"
        android:textColor="#ffffffff"
        android:layout_toLeftOf="@+id/twitter"
        android:layout_marginRight="5dp"
        android:layout_alignBottom="@+id/twitter"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:padding="1dp" />

    <ImageButton
        android:layout_width="@dimen/social_buttons_width"
        android:layout_height="wrap_content"
        android:id="@+id/twitter"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/background_normal_social"
        android:src="@drawable/twitter"
        android:textColor="#ffffffff"
        android:layout_marginTop="@dimen/social_buttons_margin_top"
        android:layout_below="@+id/password_recovery"
        android:layout_centerHorizontal="true"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:padding="1dp" />

    <ImageButton
        android:layout_width="@dimen/social_buttons_width"
        android:layout_height="wrap_content"
        android:id="@+id/vk"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/background_normal_social"
        android:src="@drawable/vk"
        android:textColor="#ffffffff"
        android:layout_toRightOf="@+id/twitter"
        android:layout_marginLeft="5dp"
        android:layout_alignBottom="@+id/twitter"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:padding="1dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/privacy_policy_text_view"
        android:id="@+id/privacy_policy"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:textColor="#ffffffff" />
</RelativeLayout>