<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="125dp"
        android:orientation="vertical"
        android:id="@+id/edit_profile_top"
        android:animateLayoutChanges="true" />

    <RelativeLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true">

        <com.makeramen.RoundedImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:id="@+id/imageView"
            android:src="@drawable/background"
            app:riv_border_color="#fff"
            android:scaleType="center"
            app:riv_corner_radius="30dp"
            app:riv_border_width="0.5dp"
            app:riv_oval="false"
            android:layout_alignBottom="@+id/vertical_separator" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="@dimen/layout_width"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/nickname_profile"
            android:singleLine="true"
            app:floatingLabel="highlight"
            app:hideUnderline="true"
            android:layout_centerHorizontal="true"
            android:hint="@string/edit_profile_nickname"
            app:baseColor="#fff"
            app:primaryColor="#fff"
            android:textSize="@dimen/text_size"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="15dp" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="@dimen/layout_width"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/gender_profile"
            android:singleLine="true"
            app:floatingLabel="highlight"
            app:hideUnderline="true"
            app:baseColor="#fff"
            app:primaryColor="#fff"
            app:floatingLabelText=""
            android:layout_below="@+id/nickname_profile"
            android:layout_centerHorizontal="true"
            android:hint="@string/edit_profile_gender"
            android:textSize="@dimen/text_size"
            android:layout_marginBottom="5dp" />
        <!--app:floatingLabelText="@string/edit_profile_gender_hint"-->

        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="@dimen/layout_width"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/birthday_profile"
            android:singleLine="true"
            app:floatingLabel="highlight"
            app:hideUnderline="true"
            app:baseColor="#fff"
            app:primaryColor="#fff"
            app:floatingLabelText=""
            android:layout_below="@+id/gender_profile"
            android:layout_centerHorizontal="true"
            android:hint="@string/edit_profile_birthday"
            android:textSize="@dimen/text_size" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel_button"
            android:textAllCaps="false"
            android:id="@+id/cancel_button"
            android:textColor="#FFF"
            android:textSize="@dimen/text_size"
            android:background="@drawable/background_niagara"
            android:layout_below="@+id/birthday_profile"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="30dp"
            android:layout_toLeftOf="@+id/vertical_separator"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp" />

        <View
            android:id="@+id/vertical_separator"
            android:layout_width="1dp"
            android:layout_height="70dp"
            android:layout_below="@+id/birthday_profile"
            android:layout_centerHorizontal="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok_button"
            android:textAllCaps="false"
            android:id="@+id/ok_button"
            android:textColor="#FFF"
            android:textSize="@dimen/text_size"
            android:background="@drawable/background_niagara"
            android:layout_alignParentRight="true"
            android:layout_toRightOf="@+id/vertical_separator"
            android:layout_below="@+id/birthday_profile"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/edit_profile_bottom"
        android:animateLayoutChanges="true" />

</LinearLayout>